--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,7 @@
       "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
     },
     "lint": {
-      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"],
+      "inputs": ["**/*.ts", "**/*.tsx"],
       "outputs": []
     },
     "clean": {
