test(cookbook): test stubs

--- a/packages/cookbook/package.json
+++ b/packages/cookbook/package.json
@@ -8,12 +8,16 @@
     "license": "ISC",
     "scripts": {
         "lint": "eslint --ext .js .",
-        "lint:fix": "pnpm lint --fix"
+        "lint:fix": "pnpm lint --fix",
+        "test": "jest test"
     },
     "dependencies": {
         "bn.js": "5.2.1",
         "chalk": "^4.1.1",
         "homedir": "^0.6.0",
         "near-api-js": "workspace:*"
+    },
+    "devDependencies": {
+        "jest": "^26.0.1"
     }
 }
