--- a/packages/near-api-js/package.json
+++ b/packages/near-api-js/package.json
@@ -25,8 +25,11 @@
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
+        "@types/depd": "^1.1.32",
         "@types/http-errors": "^1.6.1",
+        "@types/mustache": "^4.2.1",
         "@types/node": "^18.7.14",
+        "@types/node-fetch": "^2.6.2",
         "browserify": "^16.2.3",
         "bundlewatch": "^0.3.1",
         "concurrently": "^7.3.0",
