--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,27 +1,8 @@
 {
     "compilerOptions": {
-        "esModuleInterop": true,
-        "lib": [
-            "es2015",
-            "esnext"
-        ],
-        "module": "commonjs",
-        "target": "es2015",
-        "moduleResolution": "node",
-        "alwaysStrict": true,
-        "outDir": "./lib",
-        "declaration": true,
-        "preserveSymlinks": true,
-        "preserveWatchOutput": true,
-        "pretty": false,
-        "forceConsistentCasingInFileNames": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": false,
-        "noImplicitReturns": true,
-        "noUnusedLocals": true,
-        "experimentalDecorators": true,
-        "resolveJsonModule": true,
+        "outDir": "./lib"
     },
+    "extends": "../../tsconfig",
     "files": [
         "src/index.ts"
     ]
